[gd_scene load_steps=3 format=3 uid="uid://w8vkypdvcasr"]

[ext_resource type="Script" path="res://Misc/Box.gd" id="1_rxf1r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ry4h2"]
size = Vector2(48, 48)

[node name="Box" type="Area2D" groups=["Box"]]
z_index = 4
script = ExtResource("1_rxf1r")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0
color = Color(0.733333, 0.427451, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ry4h2")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
